--- a/PocoDataSet.Data/PocoDataSet.Data.csproj
+++ b/PocoDataSet.Data/PocoDataSet.Data.csproj
@@ -1,12 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\\SharedBuildSettings.props" />
-
+  <PropertyGroup>
+    <Description>POCO DataSet components</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>PocoDataSet.Data</PackageId>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/Laskarzhevsky/PocoDataSet</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
+  </PropertyGroup>
+  
   <ItemGroup>
-    <AssemblyAttribute Include="System.Reflection.AssemblyDescriptionAttribute">
-      <_Parameter1>POCO DataSet</_Parameter1>
-    </AssemblyAttribute>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
-
+  
   <ItemGroup>
     <ProjectReference Include="..\PocoDataSet.IData\PocoDataSet.IData.csproj" />
   </ItemGroup>
