--- a/SharedBuildSettings.props
+++ b/SharedBuildSettings.props
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <AssemblyCompany>Laskarzhevsky Software Inc</AssemblyCompany>
     <Authors>Laskarzhevsky Software Inc</Authors>
+    <Company>Laskarzhevsky Software Inc</Company>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>embedded</DebugType>
@@ -10,6 +11,6 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <TargetFramework>net9.0</TargetFramework>
-    <Version>1.0.0</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 </Project>
