PocoDataSet.SqlServerDataAdapter project added and PocoDataSet.Demo modified

--- a/PocoDataSet.Demo/PocoDataSet.Demo.csproj
+++ b/PocoDataSet.Demo/PocoDataSet.Demo.csproj
@@ -12,6 +12,11 @@
     <ProjectReference Include="..\PocoDataSet.Extensions\PocoDataSet.Extensions.csproj" />
     <ProjectReference Include="..\PocoDataSet.IData\PocoDataSet.IData.csproj" />
     <ProjectReference Include="..\PocoDataSet.Serializer\PocoDataSet.Serializer.csproj" />
+    <ProjectReference Include="..\PocoDataSet.SqlServerDataAdapter\PocoDataSet.SqlServerDataAdapter.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DatabaseItems\" />
   </ItemGroup>
 
 </Project>
