--- a/PocoDataSet.DemoWithNugetPackage/PocoDataSet.DemoWithNugetPackage.csproj
+++ b/PocoDataSet.DemoWithNugetPackage/PocoDataSet.DemoWithNugetPackage.csproj
@@ -8,7 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="PocoDataSet" Version="1.0.3" />
+    <PackageReference Include="PocoDataSet" Version="1.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PocoDataSet.SqlServerDataAdapter\PocoDataSet.SqlServerDataAdapter.csproj" />
   </ItemGroup>
 
 </Project>
