--- a/PocoDataSet.IData/PocoDataSet.IData.csproj
+++ b/PocoDataSet.IData/PocoDataSet.IData.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\\SharedBuildSettings.props" />
   <PropertyGroup>
-    <Description>POCO DataSet interfaces</Description>
+    <Description>POCO DataSet interfaces. The POCO DataSet documentation is published in the "POCO DataSet" section of businessprocessprogramming.net website.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>PocoDataSet.IData</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
