NuGet packages publishing

--- a/PocoDataSet.DemoWithNugetPackage/PocoDataSet.DemoWithNugetPackage.csproj
+++ b/PocoDataSet.DemoWithNugetPackage/PocoDataSet.DemoWithNugetPackage.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PocoDataSet.DataMerge\PocoDataSet.DataMerge.csproj" />
     <ProjectReference Include="..\PocoDataSet.SqlServerDataAdapter\PocoDataSet.SqlServerDataAdapter.csproj" />
   </ItemGroup>
 
