--- a/PocoDataSet/PocoDataSet.csproj
+++ b/PocoDataSet/PocoDataSet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors>Laskarzhevsky Software Inc</Authors>
     <Company>Laskarzhevsky Software Inc</Company>
-    <Description>Meta-package that brings in all POCO DataSet components</Description>
+    <Description>Meta-package that brings in all POCO DataSet components. The POCO DataSet documentation is published in the "POCO DataSet" section of businessprocessprogramming.net website.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <IsPackable>true</IsPackable>
@@ -13,7 +13,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
     <TargetFramework>net9.0</TargetFramework>
-    <Version>1.0.5</Version>
+    <Version>1.0.6</Version>
   </PropertyGroup>
   
   <ItemGroup>
@@ -21,10 +21,12 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="PocoDataSet.Data" Version="1.0.5" />
-    <PackageReference Include="PocoDataSet.Extensions" Version="1.0.5" />
-    <PackageReference Include="PocoDataSet.IData" Version="1.0.5" />
-    <PackageReference Include="PocoDataSet.Serializer" Version="1.0.5" />
-    <PackageReference Include="PocoDataSet.SqlServerDataAdapter" Version="1.0.5" />
+    <PackageReference Include="PocoDataSet.Data" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.DataMerge" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.Extensions" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.IData" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.IDataMerge" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.Serializer" Version="1.0.6" />
+    <PackageReference Include="PocoDataSet.SqlServerDataAdapter" Version="1.0.6" />
   </ItemGroup>
 </Project>
