DataSet merge bug fix and unit tests added

--- a/PocoDataSet.ObservableTests/PocoDataSet.ObservableTests.csproj
+++ b/PocoDataSet.ObservableTests/PocoDataSet.ObservableTests.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\PocoDataSet.Extensions\PocoDataSet.Extensions.csproj" />
     <ProjectReference Include="..\PocoDataSet.IData\PocoDataSet.IData.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ExtensionMethodsTests\ObservableDataSetExtensions\" />
+    <Folder Include="ExtensionMethodsTests\ObservableDataTableExtensions\" />
+  </ItemGroup>
 </Project>
