--- a/PocoDataSet/PocoDataSet.csproj
+++ b/PocoDataSet/PocoDataSet.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors>Laskarzhevsky Software Inc</Authors>
     <Company>Laskarzhevsky Software Inc</Company>
-    <Description>Meta-package that brings in all POCO DataSet components. The POCO DataSet documentation is published in the "POCO DataSet" section of businessprocessprogramming.net website.</Description>
+    <Description>Meta-package that brings in all POCO DataSet components. The POCO DataSet documentation is published in the "POCO DataSet" section of businessprocessprogramming.net website. The source code is published on https://github.com/Laskarzhevsky/PocoDataSet</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IncludeBuildOutput>false</IncludeBuildOutput>
     <IsPackable>true</IsPackable>
