--- a/PocoDataSet.SqlServerDataAdapter/PocoDataSet.SqlServerDataAdapter.csproj
+++ b/PocoDataSet.SqlServerDataAdapter/PocoDataSet.SqlServerDataAdapter.csproj
@@ -9,6 +9,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="SqlDataAdapter\SqlDataAdapter_Old.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
