Observable POCO DataSet components review

--- a/PocoDataSet.ObservableExtensions/PocoDataSet.ObservableExtensions.csproj
+++ b/PocoDataSet.ObservableExtensions/PocoDataSet.ObservableExtensions.csproj
@@ -9,6 +9,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Merging\ObservableDataRowDefaultMergeHandler_.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
