--- a/PocoDataSet.Data/PocoDataSet.Data.csproj
+++ b/PocoDataSet.Data/PocoDataSet.Data.csproj
@@ -9,6 +9,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="DataTable.cs~RF2d5dcad.TMP" />
+  </ItemGroup>
   
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
