--- a/PocoDataSet.IData/PocoDataSet.IData.csproj
+++ b/PocoDataSet.IData/PocoDataSet.IData.csproj
@@ -9,6 +9,9 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/Laskarzhevsky/PocoDataSet</RepositoryUrl>
   </PropertyGroup>
+  <ItemGroup>
+    <None Remove="Merging\MergeMode.cs~RFee5fbb3.TMP" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\" />
